added home link

--- a/index.html
+++ b/index.html
@@ -24,10 +24,10 @@
       <li class="logo"><a href="#">
          <img src="/img/logo.svg" alt="">
         </a></li>
-      <li><a href="#">HOME</a></li>
-      <li><a href="#">MERCH</a></li>
-      <li><a href="#">MINIATURE</a></li>
-      <li><a href="#">GAME RULES</a></li>
+      <li><a href="#main">HOME</a></li>
+      <li><a href="#merch">MERCH</a></li>
+      <li><a href="#miniature">MINIATURE</a></li>
+      <li><a href="#gamerules">GAME RULES</a></li>
     </ul>
   </nav>
         
@@ -119,7 +119,7 @@
    </div>
 
    <!-- 2ND CONTENT -->
-   <div class="second-container">
+   <div class="second-container" id="merch">
     <div class="second-header">
       <h1>COLD HARBOR SPECIAL OBJECTS GROUP APPAREL</h1>
          <p>APPAREL & SHIRTS</p>
@@ -167,7 +167,7 @@
 </div>
 
 <!-- THIRD CONTENT -->
-<div class="third-container">
+<div class="third-container" id="miniature">
     <div class="third-head">
           <h1>GAME COMPONENTS AND MINIATURES</h1>
             <p>CLOSE COMBAT IN A FAILED STATE AT WAR</p>
@@ -219,7 +219,7 @@
 </div>
 
 <!-- FOURTH-CONTAINER -->
-    <div class="fourth-container">
+    <div class="fourth-container" id="gamerules">
           <div class="the-basics">
                   <div class="left-basics">
                           <img src="/img/the-basics.png" alt="">
@@ -371,13 +371,10 @@
                         </div>
 
                           <div class="right-content">
-                              <div class="merch-container">
+                              <div class="merch-container" style="margin-bottom: 3em">
                                 <h1>MERCH</h1>
 
                                 <div class="link-item">
-                                  <p>
-                                    <a href="#main">
-                                    Home</a></p>
                                   <p>
                                     <a href="#">
                                     Morale Patches</a></p>
@@ -390,7 +387,7 @@
                                 </div>
                               </div>
 
-                             <div class="miniature-container">
+                             <div class="miniature-container" style="margin-bottom: 3em"> 
                               <div class="miniature-container">
                                 <h1>MINIATURE</h1>
 
@@ -405,7 +402,7 @@
                               </div>
                              </div>
 
-                             <div class="game-container">
+                             <div class="game-container" style="margin-bottom: 3em">
                               <div class="game-container">
                                 <h1>GAME RULES</h1>
 
